@@ -447,6 +447,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Max Fea
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = New Query Layer
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Query\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Required field missing\: Query
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = Selection
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = View
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Run Datastore Query
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = features
