@@ -449,6 +449,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Maxim\u
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = Nov\u00E1 vrstva z dotazu
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Dotaz\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Chyb\u00ED povinn\u00E9 pole\: Dotaz
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = Pohled
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Spustit dotaz nad datab\u00E1z\u00ED
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = geoprvky
