@@ -441,6 +441,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Maximal
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = Neue Abfrage Ebene
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Abfrage\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Ben\u00F6tigte Information fehlt\: Abfrage
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = Ansicht
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Datenbankabfrage ausf\u00FChren
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = Objekte
