@@ -420,6 +420,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features=N\u00FAme
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer=Nueva capa de consulta
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query=Consulta\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query=Campo requerido no encontrado\: Consulta (Query)
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View=Vista
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features=\ elementos
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query=Ejecutar consulta de almac\u00E9n de datos
