@@ -449,6 +449,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Kohteid
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = Uusi SQL-kyselytaso
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Kysely\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Pakollinen kentt\u00E4 puuttuu\: Kysely
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = N\u00E4kym\u00E4
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Tee tietokantakysely
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = kohteita
