@@ -441,6 +441,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Nombre 
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = Nouvelle couche SQL
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Requ\u00EAte\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Information manquante\: Requ\u00EAte
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = Selection
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = Vue
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Ex\u00E9cuter une requ\u00EAte SQL
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = objets
