@@ -460,6 +460,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Max. el
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = \u00DAj lek\u00E9rdez\u00E9s r\u00E9teg
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Lek\u00E9rdez\u00E9s\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = K\u00F6telez\u0151 mez\u0151 hi\u00E1nyzik\: Lek\u00E9rdez\u00E9s
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = N\u00E9zet
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Adatt\u00E1r lek\u00E9rdez\u00E9s futtat\u00E1sa
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = elemek
