@@ -420,6 +420,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features=Numero ma
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer=Nuovo livello di interrogazione
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query=Interrogazione\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query=Manca informazione necessaria\: Interrogazione (Query)
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View=Vista
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features=elementi
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query=Esegui interrogazione su datastore
