@@ -499,6 +499,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = \#T\
 #T:jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = New Query Layer
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = \u554F\u3044\u5408\u308F\u305B\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = \u5FC5\u8981\u306A\u30D5\u30A3\u30FC\u30EB\u30C9\u304C\u3042\u308A\u307E\u305B\u3093\: \u554F\u3044\u5408\u308F\u305B
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = \u8868\u793A
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = \u30C7\u30FC\u30BF\u30B9\u30C8\u30A2\u691C\u7D22\u306E\u5B9F\u884C
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = \u30D5\u30A3\u30FC\u30C1\u30E3
