@@ -552,6 +552,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = \#T\:
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = \#T\:
 #T:feature.IndexedFeatureCollection.index-cannot-be-modified = Index Cannot Be Modified
 #T:io.ShapefileReader.filename-must-end-in-shp = Filename must end in '.shp'
