@@ -492,6 +492,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Fei\u00
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = T\:New Query Layer
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = Consulta\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Falta o campo requerido\: Consulta
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = Vista
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Executar consulta no Datastore
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = fei\u00E7\u00F5es
