@@ -495,6 +495,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Max-Features = Max Fea
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = \u0BAA\u0BC1\u0BA4\u0BBF\u0BAF  \u0B95\u0BC7\u0BB3\u0BCD\u0BB5\u0BBF \u0B85\u0B9F\u0BC1\u0B95\u0BCD\u0B95\u0BC1 
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = \u0B95\u0BC7\u0BB3\u0BCD\u0BB5\u0BBF\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = Required field missing\: \u0B95\u0BC7\u0BB3\u0BCD\u0BB5\u0BBF
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = \u0BAA\u0BBE\u0BB0\u0BCD\u0BB5\u0BC8\u0BAF\u0BBF\u0B9F\u0BB5\u0BC1\u0BAE\u0BCD
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = Run Datastore Query
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = \u0B85\u0BAE\u0BCD\u0B9A\u0B99\u0BCD\u0B95\u0BB3\u0BCD
