@@ -498,6 +498,7 @@ jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = \#T\
 #T:jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.New-Query-Layer = New Query Layer
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Query = \u67E5\u8BE2\uFF1A
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Required-field-missing-Query = \u5FC5\u586B\u5B57\u6BB5\u7F3A\u5C11\uFF1A\u67E5\u8BE2
+jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.Selection = \#T\:
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPanel.View = \u67E5\u770B
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.Run-Datastore-Query = \u8FD0\u884C\u6570\u636E\u5B58\u50A8\u67E5\u8BE2
 jump.workbench.ui.plugin.datastore.RunDatastoreQueryPlugIn.features = \u7279\u5F81
