@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-11-30 mmichaud <michael.michaud@free.fr>
+  * Add an option in the RunDataStoreQueryPlugIn to insert a ${selection} mark
+    in the query. This parameter is replaced by the union of selected
+    geometries before the query is run against the database.
+
 2012-11-28 mmichaud <michael.michaud@free.fr>
   * Add a fifth option to PostGISWriter to empty a PostgreSQL table before 
     inserting features from the layer (in order to save the precise structure 
